[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/L0_train/sunflower_road/sunflower_tile.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/L0_train/sunflower_road/cloud_tile_big-min.png" type="Texture" id=3]
[ext_resource path="res://BG.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/21.0 Train/SunflowerRoad.gd" type="Script" id=5]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/21.0 Train/parallax_clouds.gd" type="Script" id=7]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/21.0 Train/sunflower_house.tscn" type="PackedScene" id=9]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/L0_train/sunflower_road/cypress_02-min.png" type="Texture" id=11]
[ext_resource path="res://sprites/L0_train/sunflower_road/cypress_01-min.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 101.19, 752.766 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28977, 136.173 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 71.0704, 1381.9 )

[node name="SunflowerRoad" type="Node2D"]
position = Vector2( -2.09241, -4.18497 )
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="BG2" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = -918.708
margin_top = -896.513
margin_right = 3044.29
margin_bottom = 2153.49

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="clouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 1920, 0 )
script = ExtResource( 7 )
CLOUD_SPEED = 10.0

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/clouds"]
margin_left = -2203.0
margin_top = 435.527
margin_right = 4247.0
margin_bottom = 1269.53
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cypress_bakbak" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -1513.76, 0 )
motion_scale = Vector2( 0.12, 1 )

[node name="cypress_02-min" type="Sprite" parent="ParallaxBackground/cypress_bakbak"]
position = Vector2( 1564.68, 872.576 )
scale = Vector2( 0.62, 0.62 )
texture = ExtResource( 11 )

[node name="cypress_back" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -497.803, 0 )
motion_scale = Vector2( 0.14, 1 )

[node name="cypress_02-min3" type="Sprite" parent="ParallaxBackground/cypress_back"]
position = Vector2( 573.504, 689.969 )
scale = Vector2( 0.722049, 0.722049 )
texture = ExtResource( 11 )
offset = Vector2( 19.3194, 214.117 )

[node name="cypress_mid2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -497.803, 0 )
motion_scale = Vector2( 0.17, 1 )

[node name="cypress_02-min2" type="Sprite" parent="ParallaxBackground/cypress_mid2"]
position = Vector2( 610.741, 664.028 )
scale = Vector2( 0.883528, 0.883528 )
texture = ExtResource( 11 )
offset = Vector2( 19.3194, 214.117 )

[node name="cypress_front" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -381.595, 57.4975 )
motion_scale = Vector2( 0.2, 1 )

[node name="cypress_02-min" type="Sprite" parent="ParallaxBackground/cypress_front"]
position = Vector2( 561.876, 767.636 )
texture = ExtResource( 11 )

[node name="flowers4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 116.208, 57.4975 )
motion_scale = Vector2( 0.2, 1 )

[node name="sunflowers" type="TextureRect" parent="ParallaxBackground/flowers4"]
modulate = Color( 1, 1, 1, 0.443137 )
margin_left = -14291.0
margin_top = 850.0
margin_right = 35188.0
margin_bottom = 1255.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flowers2" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 1, 1, 1, 0.698039 )
position = Vector2( -4, 8 )
motion_scale = Vector2( 0.3, 1 )

[node name="sunflowers" type="TextureRect" parent="ParallaxBackground/flowers2"]
margin_left = -15466.0
margin_top = 868.0
margin_right = 36728.0
margin_bottom = 1273.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cypress_behind_house" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.45, 1 )

[node name="cypress_01-min4" type="Sprite" parent="ParallaxBackground/cypress_behind_house"]
position = Vector2( 4587.97, 658.984 )
scale = Vector2( 1.82649, 1.32665 )
texture = ExtResource( 12 )

[node name="cypress_02-min2" type="Sprite" parent="ParallaxBackground/cypress_behind_house"]
position = Vector2( 3956.35, 620.882 )
scale = Vector2( 1.53963, 1.53963 )
texture = ExtResource( 11 )

[node name="cypress_02-min3" type="Sprite" parent="ParallaxBackground/cypress_behind_house"]
position = Vector2( 4257.58, 676.817 )
scale = Vector2( 1.40938, 1.40938 )
texture = ExtResource( 11 )

[node name="flowers" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )

[node name="sunflowers" type="TextureRect" parent="ParallaxBackground/flowers"]
margin_left = -16757.0
margin_top = 851.0
margin_right = 17832.0
margin_bottom = 1256.0
rect_scale = Vector2( 0.789269, 0.789269 )
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cypress_01-min" type="Sprite" parent="ParallaxBackground/flowers"]
position = Vector2( 4073.16, 666.524 )
scale = Vector2( 1.49589, 1.49589 )
texture = ExtResource( 12 )

[node name="house" parent="ParallaxBackground/flowers" instance=ExtResource( 9 )]
position = Vector2( 4455.29, 1128 )

[node name="cypress_01-min2" type="Sprite" parent="ParallaxBackground/flowers"]
position = Vector2( 3803.05, 875.883 )
texture = ExtResource( 12 )

[node name="cypress_01-min3" type="Sprite" parent="ParallaxBackground/flowers"]
position = Vector2( 5190.43, 755.15 )
scale = Vector2( 1.82649, 1.32665 )
texture = ExtResource( 12 )

[node name="cypress_02-min" type="Sprite" parent="ParallaxBackground/flowers"]
position = Vector2( 5016.44, 621.324 )
scale = Vector2( 1.70203, 1.62312 )
texture = ExtResource( 11 )

[node name="PuppyCamera" parent="." instance=ExtResource( 10 )]
position = Vector2( 937.55, 830.475 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -13192, 176.478 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 10591, 1393.27 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 985.894, 1265.74 )
camera = NodePath("../../PuppyCamera")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -3.17896, 6.35803 )

[node name="BottomSpawnPoint" parent="." instance=ExtResource( 6 )]
position = Vector2( -12945.9, 1160.29 )

[node name="LowerTZ" parent="." instance=ExtResource( 8 )]
position = Vector2( -9789, 1135.45 )

[node name="CollisionShape2D" parent="LowerTZ" index="0"]
position = Vector2( -3395.39, 6.69312 )
shape = SubResource( 2 )

[node name="ParallaxForeground" type="ParallaxBackground" parent="."]
layer = 1

[node name="flowers2" type="ParallaxLayer" parent="ParallaxForeground"]
position = Vector2( -197.844, 14.7451 )
motion_scale = Vector2( 0.9, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="sunflower_tile2" type="Sprite" parent="ParallaxForeground/flowers2"]
modulate = Color( 0.631373, 0.560784, 0.431373, 1 )
position = Vector2( 944.611, 1061.8 )
texture = ExtResource( 1 )

[node name="TopCollision" type="StaticBody2D" parent="."]
position = Vector2( 697.171, 1003.17 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCollision"]
shape = SubResource( 3 )

[node name="BottomCollision" type="StaticBody2D" parent="."]
position = Vector2( 658.586, 1352.57 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomCollision"]
position = Vector2( 0, -1.68188 )
shape = SubResource( 3 )

[node name="RightStuff" type="Node2D" parent="."]
position = Vector2( 576.997, 0 )

[node name="UpperTZ" parent="RightStuff" instance=ExtResource( 8 )]
position = Vector2( 8342.88, 1187.07 )

[node name="CollisionShape2D" parent="RightStuff/UpperTZ" index="0"]
position = Vector2( -147.079, -240.416 )
shape = SubResource( 1 )

[node name="TopSpawnPoint" parent="RightStuff" instance=ExtResource( 6 )]
position = Vector2( 7914.22, 1201.23 )

[connection signal="transition_triggered" from="LowerTZ" to="." method="_on_LowerTZ_transition_triggered"]
[connection signal="transition_triggered" from="RightStuff/UpperTZ" to="." method="_on_UpperTZ_transition_triggered"]

[editable path="PuppyCamera"]
[editable path="LowerTZ"]
[editable path="RightStuff/UpperTZ"]
